--- a/ap-client/src/app/modal/sku-promotion-modal/sku-promotion-modal.component.html
+++ b/ap-client/src/app/modal/sku-promotion-modal/sku-promotion-modal.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="top30">
   <h4>Search Products</h4>
   <div class="row">
       <input class="form-control" type="text" id="search" name="search" [(ngModel)]="filter">      
