--- a/ap-client/src/app/modal/sku-promotion-modal/sku-promotion-modal.component.html
+++ b/ap-client/src/app/modal/sku-promotion-modal/sku-promotion-modal.component.html
@@ -10,6 +10,7 @@
         <tr>
           <th>NAME</th>
           <th>SKU</th>
+          <th>BARCODE</th>
           <th>Select</th>
         </tr>
       </thead>
@@ -17,6 +18,7 @@
         <tr *ngFor="let product of products | filter:filter | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
           <td>{{product.name}}</td>
           <td>{{product.sku}}</td>
+          <td>{{product.barcode}}</td>
           <td><input type="checkbox" name="i" [checked]="isSelected(product)"
             (change)="addToProductList($event.target.checked, product)"></td>
         </tr>
