--- a/ap-client/src/app/modal/promotion-modal/promotion-modal.component.html
+++ b/ap-client/src/app/modal/promotion-modal/promotion-modal.component.html
@@ -1,5 +1,5 @@
 <div class="card-body">
-  <label for="promoName">Promotion Name:</label>
+  <label for="promoName"><strong>Name:</strong></label>
   <div class="form-group">
     <div class="row">
       <input type="text" class="form-control col-lg-8" [(ngModel)]="promoNameModel"
