Angular:admin feature create new promotion

--- a/ap-client/src/app/dashboard/admindashboard/admindashboard.component.html
+++ b/ap-client/src/app/dashboard/admindashboard/admindashboard.component.html
@@ -5,6 +5,7 @@
         <ul class="nav">
           <li><a style="cursor: pointer" (click)="onShowDashboard()">Dashboard</a></li>
           <li><a style="cursor: pointer" (click)="onShowProfile()">Profile</a></li>
+          <li><a style="cursor: pointer" (click)="showPromotion()">New Promotion</a></li>
         </ul>
       </div>
     </div>
