Angular:admin dashboard features

--- a/ap-client/src/app/dashboard/admindashboard/promotion/promotion.component.html
+++ b/ap-client/src/app/dashboard/admindashboard/promotion/promotion.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="d-flex flex-row-reverse">
           <div class="p-2" >
-            <button type="button" class="btn btn-success" (click)="acceptPromotion()">Activate</button>
+            <button type="button" class="btn btn-success" (click)="activatePromo()">Activate</button>
           </div>
     </div> 
   <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm)">
