--- a/ap-client/src/app/home/home.component.html
+++ b/ap-client/src/app/home/home.component.html
@@ -1,25 +1,30 @@
 <div class="container" *ngIf ="pageLoaded">
-
-  <div class="container">
-      <div class="row">
-        <h4>Welcome, {{homeContent.userName}}</h4>
-      </div>
-  </div>
-  <br>
   <div class="card">
     <div class="card-body">
       <h5>My Dashboard</h5>
       <!-- Image components -->
       <div class="row col-lg-12">
 
-        <span class="column col-lg-3" *ngIf='homeContent.activePromoYear != null'>
+        <span class="column col-lg-3">
           <img src="./assets/images/calendar.png" alt="pie-chart">
-          <figcaption class="imgCaption" *ngIf="homeContent.role === 'VENDOR'"><a  [routerLink]="['/supplier',homeContent.activePromoYear]">Annual Planning</a></figcaption>
-        </span>
-
-        <span class="column col-lg-3" *ngIf='homeContent.activePromoYear == null'>
-          <img src="./assets/images/calendar.png" alt="pie-chart">
-          <figcaption class="imgCaption" *ngIf="homeContent.role === 'VENDOR'"><a  [routerLink]="['/supplier',homeContent.activePromoYear]">Annual Planning</a></figcaption>
+          <figcaption class="imgCaption">
+            <label class="mr-sm-2" for="inlineFormCustomSelect">Promotions:</label>
+            <select class="custom-select mr-sm-2" (change)="onSelect($event.target.value)">
+              <option selected>Choose...</option>
+              <option *ngFor="let p of promotions" [value]="p.pid">
+                {{p.name}}
+              </option>
+            </select> 
+          </figcaption>
+          <figcaption class="imgCaption" *ngIf ="homeContent.role === 'CM'">
+              <label class="mr-sm-2" for="inlineFormCustomSelect">Suppliers:</label>
+              <select class="custom-select mr-sm-2" (change)="onSupplierSelect($event.target.value)">
+                <option selected>Choose...</option>
+                <option *ngFor="let s of promotionSuppliers" [value]="s.supplierID">
+                  {{s.supplierName}}
+                </option>
+              </select> 
+            </figcaption>
         </span>
 
         <span  class="column col-lg-3">
