--- a/ap-client/src/app/dashboard/admindashboard/admindashboard.component.html
+++ b/ap-client/src/app/dashboard/admindashboard/admindashboard.component.html
@@ -3,10 +3,10 @@
     <div class="col-md-2">
       <div class="sidebar content-box">
         <ul class="nav">
-          <li><a style="cursor: pointer" (click)="onShowDashboard()">Dashboard</a></li>
-          <li><a style="cursor: pointer" (click)="onShowProfile()">Profile</a></li>
-          <li><a style="cursor: pointer" (click)="newPromotion()">New Promotion</a></li>
           <li><a style="cursor: pointer" (click)="showPromotion()">Promotions</a></li>
+          <li><a style="cursor: pointer" (click)="newPromotion()">New Promotion</a></li>
+          <li><a style="cursor: pointer" (click)="onShowDashboard()">Register User</a></li>
+          <li><a style="cursor: pointer" (click)="onShowProfile()">Profile</a></li>
         </ul>
       </div>
     </div>
