--- a/ap-client/src/app/dashboard/admindashboard/promotion/manage-promotion/manage-promotion.component.html
+++ b/ap-client/src/app/dashboard/admindashboard/promotion/manage-promotion/manage-promotion.component.html
@@ -22,5 +22,5 @@
 </div>
 </div>
 <div class="container" *ngIf="promotions.length == 0">
-  <h5>No Promotion Present</h5>
+  <h5>No Draft Promotion Present</h5>
 </div>
