--- a/ap-client/src/app/manager/manager.component.html
+++ b/ap-client/src/app/manager/manager.component.html
@@ -27,6 +27,7 @@
 
     <div class="table-responsive">
        <h4>Supplier : {{currentSupplierName}} </h4>
+       <h4>Promotion : {{promotionName}}</h4>
        <br>
           <table class="table table-sm">
             <thead>
