--- a/ap-client/src/app/supplier/supplier.component.html
+++ b/ap-client/src/app/supplier/supplier.component.html
@@ -25,7 +25,7 @@
   </div>
 
     <div class="table-responsive">
-        <h3>Annual Promotion</h3>
+        <h4>Promotion : {{promotionName}}</h4>
         <table class="table table-sm">
             <thead>
               <tr>
